中间件测试完毕

--- a/app2/templates/app2/view.html
+++ b/app2/templates/app2/view.html
@@ -6,7 +6,7 @@
     <title>类视图测试</title>
 </head>
 <body>
-    get 请求的放回页面
+    get 请求的返回页面
     <hr>
     <form action="{url app2:test_view}" method="post">
         <input type="submit" value="发送post请求">
